# pxcrypt

./: .cvsignore  ChangeLog  README  autogen.sh  configure.in  pxcrypt.spec.in
debian/: changelog  control  pxcrypt.links  rules  watch
doc/: Makefile.am  pxcrypt.sgml
po/: de.po
src/: .cvsignore  Makefile.am  main.c
